--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@antv/graphin": "^2.5.0",
     "@antv/graphin-components": "^2.4.0",
     "@umijs/preset-react": "1.x",
+    "antd": "^4.18.9",
     "mockjs": "^1.1.0",
-    "umi": "^3.3.10"
+    "umi": "^3.5.21"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
